--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,8 +1,9 @@
 .header {
     width: 100%;
     height: 150px;
+    font-size: 50px;
     color: white;
-    background-color: black;
+    background-color: saddlebrown;
     display: flex;
     justify-content: center;
     align-items: center;
