--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,12 +1,10 @@
 .footer {
     width: 100%;
     height: 200px;
-    background-color: aqua;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.title {
-    color: blue;
+    color: white;
     font-size: 50px;
 }
