--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -2,7 +2,10 @@
 .addButton {
     width: 200px;
     height: 60px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     background: blue;
     color: white;
     font-size: 18px;
 }
+
